--- a/src/pages/app/components/navbar/Navbar.module.scss
+++ b/src/pages/app/components/navbar/Navbar.module.scss
@@ -10,7 +10,7 @@
     color: #fff;
     text-align: center;
     z-index: 9999;
-    padding: 10px;
+    padding: 10px 10px 10px 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,6 +51,6 @@
 
 @media (max-width: 524px) {
     .container {
-        width: 90%;
+        width: 85%;
     }
 }
