--- a/src/pages/app/Layout.module.scss
+++ b/src/pages/app/Layout.module.scss
@@ -1,5 +1,24 @@
 .container {
-    width: 100vw;
+    width: 50vw;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 724px) {
+    .container {
+        width: 80vw;
+    }
+}
+
+@media (max-width: 524px) {
+    .container {
+        width: 90vw;
+    }
 }
