update fix css tooltip

--- a/src/pages/app/components/navbar/Navbar.module.scss
+++ b/src/pages/app/components/navbar/Navbar.module.scss
@@ -52,6 +52,6 @@
     .container {
         width: 85%;
         padding: 10px 10px 10px 50px;
-        // overflow: auto hidden;
+        overflow: auto hidden;
     }
 }
