--- a/src/components/titlepage/TitlePage.module.scss
+++ b/src/components/titlepage/TitlePage.module.scss
@@ -11,4 +11,9 @@
     .descriptionmain {
         font-family: "PlaywriteCU";
     }
+
+    .line {
+        margin-top: 5px;
+        border-bottom: 1px dashed teal;
+    }
 }
