--- a/src/pages/app/Layout.module.scss
+++ b/src/pages/app/Layout.module.scss
@@ -1,24 +1,24 @@
 .container {
-    width: 50vw;
+    width: 100vw;
     height: 100vh;
     overflow: hidden;
-    margin: 0 auto;
 }
 
-@media (max-width: 1200px) {
-    .container {
+.center {
+    position: relative;
+    overflow: hidden;
+    width: 50vw;
+    margin: 0 auto;
+
+    @media (max-width: 1200px) {
         width: 70vw;
     }
-}
 
-@media (max-width: 724px) {
-    .container {
+    @media (max-width: 724px) {
         width: 80vw;
     }
-}
 
-@media (max-width: 524px) {
-    .container {
-        width: 90vw;
+    @media (max-width: 524px) {
+        width: 95vw;
     }
 }
