--- a/src/pages/app/components/navbar/Navbar.module.scss
+++ b/src/pages/app/components/navbar/Navbar.module.scss
@@ -10,11 +10,9 @@
     color: #fff;
     text-align: center;
     z-index: 9999;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 10px 10px 5px 10px;
     overflow: visible;
+    white-space: nowrap;
 
     @media (max-width: 1200px) {
         width: 70%;
@@ -25,8 +23,7 @@
     }
 
     @media (max-width: 524px) {
-        width: 90vw;
-        padding: 10px 10px 5px 65px;
+        width: 93%;
         overflow: auto hidden;
     }
 }
@@ -40,8 +37,9 @@
         margin 0.3s ease;
     background-color: rgb(203, 203, 203);
     padding: 5px 6px;
-    margin: 0 5px;
+    margin: 5px;
     position: relative;
+    display: inline-block;
     z-index: 1;
 
     &:hover {
