--- a/src/pages/about/views/About.module.scss
+++ b/src/pages/about/views/About.module.scss
@@ -2,4 +2,17 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+
+    .top {
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+
+        .imgavt {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+    }
 }
