--- a/src/pages/about/views/About.module.scss
+++ b/src/pages/about/views/About.module.scss
@@ -1,13 +1,15 @@
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 
     .top {
-        text-align: center;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
+        margin: 0 auto;
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         .imgavt {
             width: 100px;
