--- a/src/pages/app/Layout.module.scss
+++ b/src/pages/app/Layout.module.scss
@@ -2,6 +2,9 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    transition:
+        background-color 0.5s ease,
+        color 0.5s ease;
 }
 
 .center {
