--- a/src/pages/images/views/ImagesPage.module.scss
+++ b/src/pages/images/views/ImagesPage.module.scss
@@ -2,4 +2,11 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    .content {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 2px;
+    }
 }
