--- a/src/pages/contact/views/Contact.module.scss
+++ b/src/pages/contact/views/Contact.module.scss
@@ -2,4 +2,49 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    padding-bottom: 30px;
+
+    .center {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .forminput {
+            width: 100%;
+            margin-bottom: 40px;
+
+            input {
+                border: 1px solid black;
+                width: 99%;
+                height: 30px;
+                border-radius: 5px;
+                font-family: "PlaypenSans";
+                outline: none;
+            }
+
+            textarea {
+                border: 1px solid black;
+                width: 99%;
+                border-radius: 5px;
+                font-family: "PlaypenSans";
+                outline: none;
+            }
+        }
+
+        button {
+            border: none;
+            padding: 5px 50px;
+            width: fit-content;
+            border-radius: 5px;
+            cursor: pointer;
+            background: teal;
+            color: white;
+            transition: transform 0.5s ease;
+
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+    }
 }
