--- a/src/pages/project/components/projectCpt/ProjectCpt.module.scss
+++ b/src/pages/project/components/projectCpt/ProjectCpt.module.scss
@@ -2,17 +2,34 @@
     width: 100%;
     height: auto;
     min-height: 100px;
-    padding: 10px 0 30px;
-    border-bottom: 1px dashed teal;
+    padding: 10px 0 20px;
+    border-bottom: 1px solid gray;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    transition: background-color 0.5s ease-in-out;
 
     .title {
         font-size: 15px;
     }
 
-    .technical {
+    .languages {
         margin-top: 10px;
-        p {
-            padding-left: 20px;
-        }
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 5px;
+    }
+}
+
+.themeDark {
+    &:hover {
+        background-color: rgb(24, 24, 24);
+    }
+}
+
+.themeLight {
+    &:hover {
+        background-color: rgb(234, 234, 234);
     }
 }
