--- a/src/pages/project/views/Project.module.scss
+++ b/src/pages/project/views/Project.module.scss
@@ -2,4 +2,21 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    .forminput {
+        width: 100%;
+        margin-bottom: 40px;
+
+        input {
+            border: none;
+            width: calc(99% - 20px);
+            height: 30px;
+            border-radius: 5px;
+            font-family: "PlaypenSans";
+            outline: none;
+            background-color: gainsboro;
+            padding: 5px 10px;
+            margin-top: 10px;
+        }
+    }
 }
