--- a/src/pages/project/components/projectCpt/ProjectCpt.module.scss
+++ b/src/pages/project/components/projectCpt/ProjectCpt.module.scss
@@ -18,6 +18,7 @@
         display: flex;
         justify-content: start;
         align-items: center;
+        flex-wrap: wrap;
         gap: 5px;
     }
 }
