--- a/src/pages/project/components/projectCpt/ProjectCpt.module.scss
+++ b/src/pages/project/components/projectCpt/ProjectCpt.module.scss
@@ -9,8 +9,19 @@
     margin-bottom: 10px;
     transition: background-color 0.5s ease-in-out;
 
-    .title {
-        font-size: 15px;
+    .titlebox {
+        display: flex;
+        justify-content: space-between;
+
+        .title {
+            font-size: 15px;
+        }
+    }
+
+    .des {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 
     .languages {
