update solar system in home

--- a/src/pages/home/components/SolarSystem.module.scss
+++ b/src/pages/home/components/SolarSystem.module.scss
@@ -4,6 +4,11 @@
     height: 40em;
     position: relative;
     margin: 170px auto;
+
+    @media (max-width: 524px) {
+        width: 30em;
+        height: 30em;
+    }
 }
 img {
     height: 130%;
