--- a/src/pages/project/components/BoxLanguages.module.scss
+++ b/src/pages/project/components/BoxLanguages.module.scss
@@ -8,6 +8,8 @@
     padding: 0 5px;
 
     p {
+        font-size: 10px;
+
         @media (max-width: 724px) {
             font-size: 10px;
         }
