--- a/src/pages/app/Layout.module.scss
+++ b/src/pages/app/Layout.module.scss
@@ -1,6 +1,6 @@
 .container {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     transition:
         background-color 0.5s ease,
         color 0.5s ease;
