--- a/src/pages/app/Layout.module.scss
+++ b/src/pages/app/Layout.module.scss
@@ -1,6 +1,7 @@
 .container {
     width: 100vw;
     height: auto;
+    min-height: 100vh;
     transition:
         background-color 0.5s ease,
         color 0.5s ease;
