--- a/src/pages/social/components/SocialChildren.module.scss
+++ b/src/pages/social/components/SocialChildren.module.scss
@@ -7,6 +7,7 @@
         height: 30px;
         display: flex;
         justify-content: space-between;
+        padding: 0 0 0 20px;
         align-items: center;
         border-radius: 5px;
         border: 1px solid teal;
@@ -20,6 +21,7 @@
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.5s ease-out;
+        padding: 5px 20px;
     }
 
     .open {
