--- a/src/pages/social/views/Social.module.scss
+++ b/src/pages/social/views/Social.module.scss
@@ -4,6 +4,10 @@
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: 724px) {
+        flex-direction: column;
+    }
+
     .imgSocial {
         flex: 1;
 
