--- a/src/pages/project/components/projectCpt/ProjectCpt.module.scss
+++ b/src/pages/project/components/projectCpt/ProjectCpt.module.scss
@@ -4,7 +4,6 @@
     min-height: 100px;
     padding: 10px 0 20px;
     border-bottom: 1px solid gray;
-    cursor: pointer;
     border-radius: 5px;
     margin-bottom: 10px;
     transition: background-color 0.5s ease-in-out;
@@ -31,6 +30,31 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 5px;
+    }
+
+    .boxbutton {
+        margin-top: 5px;
+
+        button {
+            border: none;
+            background-color: teal;
+            color: white;
+            padding: 5px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-right: 5px;
+
+            div {
+                display: flex;
+                justify-content: center;
+                gap: 4;
+                align-items: center;
+            }
+        }
+
+        button:hover {
+            text-decoration: underline;
+        }
     }
 }
 
